--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express-async-errors": "^3.1.1",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.1",
-    "mongoose": "^5.11.16"
+    "mongoose": "^5.11.16",
+    "multer": "^1.4.2"
   }
 }
